--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -103,7 +103,7 @@
                                     <p id="emailErrorMsg"></p>
                                 </div>
                                 <div class="cart__order__form__submit">
-                                    <input type="submit" value="Commander !" id="order" />
+                                    <input type="submit" value="Commander !" id="order" name="submit" />
                                 </div>
                             </form>
                         </div>
@@ -135,6 +135,5 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/cart.js"></script>
     </body>
 </html>
